<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Couch Potato</string>
    <string name="movie_database_in_your_hand">Movie Database In Your Hand</string>
    <string name="couch_potato">Couch Potato</string>
    <string name="logo_couch_potato">logo couch potato</string>
    <string-array name="show_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>
    <string-array name="show_category">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>

    </string-array>
    <string-array name="show_poster">
        <item>@drawable/poster_a_start_is_born</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_crimes</item>
        <item>@drawable/poster_godzillakong</item>
        <item>@drawable/poster_greatest_showman</item>
        <item>@drawable/poster_halfofit</item>
        <item>@drawable/poster_infinity_war</item>
        <item>@drawable/poster_mortalkombat</item>
        <item>@drawable/poster_rayalastdragon</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_cloy</item>
        <item>@drawable/poster_god</item>
        <item>@drawable/poster_good_doctor</item>
        <item>@drawable/poster_itaewon</item>
        <item>@drawable/poster_lucifer</item>
        <item>@drawable/poster_something</item>
        <item>@drawable/poster_supergirl</item>
        <item>@drawable/poster_the_simpson</item>
        <item>@drawable/poster_the100</item>
        <item>@drawable/poster_vincenzo</item>
        <item>@drawable/poster_wom</item>
    </string-array>
    <string-array name="show_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Godzilla vs. Kong</item>
        <item>The Greatest Showman</item>
        <item>The Half Of It</item>
        <item>Avengers: Infinity War</item>
        <item>Mortal Kombat</item>
        <item>Raya and the Last Dragon</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Crash Landing on You</item>
        <item>Game of Thrones</item>
        <item>The Good Doctor</item>
        <item>Itaewon Class</item>
        <item>Lucifer</item>
        <item>Something in The Rain</item>
        <item>Supergirl</item>
        <item>The Simpsons</item>
        <item>The 100</item>
        <item>Vincenzo</item>
        <item>The World of The Married</item>
    </string-array>
    <string-array name="show_duration_hour">
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string-array name="show_duration_minute">
        <item>16</item>
        <item>23</item>
        <item>15</item>
        <item>14</item>
        <item>53</item>
        <item>45</item>
        <item>44</item>
        <item>29</item>
        <item>50</item>
        <item>47</item>
        <item>57</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string-array name="show_release_date">
        <item>10/05/2018</item>
        <item>21/12/2018</item>
        <item>27/10/2018</item>
        <item>16/11/2018</item>
        <item>24/03/2021</item>
        <item>27/12/2017</item>
        <item>05/01/2020</item>
        <item>27/04/2018</item>
        <item>14/04/2021</item>
        <item>03/03/2021</item>
        <item>14/12/2018</item>
        <item>14/12/2019</item>
        <item>17/04/2011</item>
        <item>25/09/2017</item>
        <item>31/01/2020</item>
        <item>25/01/2016</item>
        <item>30/03/2018</item>
        <item>26/10/2015</item>
        <item>17/12/1989</item>
        <item>19/03/2004</item>
        <item>20/02/2021</item>
        <item>27/03/2020</item>
    </string-array>
    <string-array name="show_ratings">
        <item>R</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>PG</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>R</item>
        <item>R13+</item>
        <item>PG</item>
        <item>R</item>
        <item>R</item>
        <item>PG-14</item>
        <item>R</item>
        <item>R</item>
        <item>R</item>
        <item>TV-14</item>
        <item>TV-PG</item>
        <item>TV-14</item>
        <item>R</item>
        <item>R</item>
    </string-array>
    <string-array name="show_user_scores">
        <item>75</item>
        <item>69</item>
        <item>80</item>
        <item>69</item>
        <item>83</item>
        <item>80</item>
        <item>72</item>
        <item>83</item>
        <item>73</item>
        <item>83</item>
        <item>84</item>
        <item>86</item>
        <item>84</item>
        <item>86</item>
        <item>84</item>
        <item>85</item>
        <item>81</item>
        <item>72</item>
        <item>78</item>
        <item>81</item>
        <item>87</item>
        <item>75</item>
    </string-array>
    <string-array name="show_tagline">
        <item>I just want to take another look at you.</item>
        <item>Home is calling</item>
        <item>Fearless lives forever</item>
        <item>Fate of One. Future of All.</item>
        <item>One will fall.</item>
        <item>The impossible comes true.</item>
        <item>A different kind of love story.</item>
        <item>An entire universe. Once and for all.</item>
        <item>Get over here.</item>
        <item>A quest to save her world.</item>
        <item>More than one wears the mask.</item>
        <item>She crash landed into his world.</item>
        <item>Winter is coming.</item>
        <item>His mind is a mystery, his methods are a miracle.</item>
        <item>I want to live a life in which you can\'t put a price on your convictions</item>
        <item>It\'s good to be bad</item>
        <item>Do you like me that much? Yes</item>
        <item>A force againts fear.</item>
        <item>On your marks, get set, d\'oh!</item>
        <item>Survival isn\'t who you are. It\'s who you become.</item>
        <item>Evil punished through evil</item>
        <item>Everything around me was perfect.</item>
    </string-array>
    <string-array name="show_link_trailer">
        <item>https://youtu.be/nSbzyEJ8X9E</item>
        <item>https://youtu.be/2wcj6SrX4zw</item>
        <item>https://youtu.be/mP0VHJYFOAU</item>
        <item>https://youtu.be/vvFybpmyB9E</item>
        <item>https://youtu.be/odM92ap8_c0</item>
        <item>https://youtu.be/AXCTMGYUg9A</item>
        <item>https://youtu.be/B-yhF7IScUE</item>
        <item>https://youtu.be/QwievZ1Tx-8</item>
        <item>https://youtu.be/QJHY4ggYCk4</item>
        <item>https://youtu.be/1VIZ89FEjYI</item>
        <item>https://youtu.be/g4Hbz2jLxvQ</item>
        <item>https://youtu.be/eXMjTXL2Vks</item>
        <item>https://youtu.be/bjqEWgDVPe0</item>
        <item>https://youtu.be/fYlZDTru55g</item>
        <item>https://youtu.be/NeaHNQJ1kCo</item>
        <item>https://youtu.be/X4bF_quwNtw</item>
        <item>https://youtu.be/srvL8tPKlo4</item>
        <item>https://youtu.be/Mh8MYFadTmQ</item>
        <item>https://youtu.be/DX1iplQQJTo</item>
        <item>https://youtu.be/aDrsItJ_HU4</item>
        <item tools:ignore="TypographyDashes">https://youtu.be/S12-4mXCNj4</item>
        <item>https://youtu.be/EpYQkWIWeV4</item>
    </string-array>
    <string name="icon_back">icon back</string>
    <string name="ratings">Ratings</string>
    <string name="scores">Scores</string>
    <string name="duration">Duration</string>
    <string name="icon_share">icon share</string>
    <string name="icon_youtube">icon youtube</string>
    <string name="release_date">Release date :</string>
    <string name="overview">Overview :</string>
    <string name="tagline">Tagline :</string>
    <string name="poster">poster</string>
</resources>