<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="405dp">

                <LinearLayout
                    android:id="@+id/layoutBackground"
                    android:background="@drawable/gradient_main"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgPoster"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="200dp"
                        android:layout_height="180dp"
                        android:src="@drawable/poster_a_start_is_born"
                        android:layout_marginTop="28dp"
                        android:contentDescription="@string/poster" />

                    <TextView
                        android:id="@+id/tvDetailJudul"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:paddingBottom="16dp"
                        tools:text="Fantastic Beasts: The Crimes of Grindelwald (2017)"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textFontWeight="600"
                        android:layout_marginTop="15dp"
                        tools:targetApi="p" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iconBack"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="22dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    android:contentDescription="@string/icon_back" />


                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="275dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ratings"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/tvDetailRatings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="PG-13"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:paddingTop="10dp"
                                android:textColor="@color/brown"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scores"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/tvDetailUserScores"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="83 %"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:paddingTop="10dp"
                                android:textColor="@color/brown"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/duration"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/tvDetailDuration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="2h 15m"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:paddingTop="10dp"
                                android:textColor="@color/brown"/>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp">

                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/tvLabelReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            android:text="@string/release_date"
                            android:textFontWeight="700"
                            android:textColor="@color/brown"
                            android:textStyle="bold"
                            tools:targetApi="p" />

                        <TextView
                            android:id="@+id/tvReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingHorizontal="15dp"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            tools:text="10/05/2017"
                            android:textFontWeight="500"
                            tools:targetApi="p" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/tvLabelTagline"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            android:text="@string/tagline"
                            android:textFontWeight="700"
                            android:textColor="@color/brown"
                            android:textStyle="bold"
                            tools:targetApi="p" />

                        <TextView
                            android:id="@+id/tvTagline"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="12dp"
                            android:textSize="16sp"
                            android:justificationMode="inter_word"
                            tools:text="I just want to take another look at you"
                            android:textFontWeight="500"
                            tools:targetApi="p" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/tvLabelOverview"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            android:text="@string/overview"
                            android:textFontWeight="700"
                            android:textColor="@color/brown"
                            android:textStyle="bold"
                            tools:targetApi="p" />

                        <TextView
                            android:id="@+id/tvOverview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="12dp"
                            android:textSize="16sp"
                            android:justificationMode="inter_word"
                            tools:text="Lorem ipsummmmmmmmmm mmmmmmm mmmmmmm mmmmm mmmm \nhalooo"
                            android:textFontWeight="500"
                            tools:targetApi="p" />
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="22dp"
                android:paddingVertical="12dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iconShare"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_share_circle"
                    android:contentDescription="@string/icon_share" />

                <ImageView
                    android:id="@+id/iconYoutube"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/app_icon_youtube"
                    android:contentDescription="@string/icon_youtube" />

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</LinearLayout>